<resources>
    <string name="app_name">Pautas</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_addpautas">Cadastrar</string>
    <string name="action_about">Sobre</string>


    <string name="txt_hello">Olá, bem vindo ao nosso app</string>
    <string name="txt_conta">Você está logado como</string>
    <string name="txt_login">Entrar</string>
    <string name="txt_cadastrar">Cadastro</string>
    <string name="txt_recuperar">Recuperar minha senha</string>
    <string name="txt_options">Opções</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_finalizar">Finalizar</string>
    <string name="txt_abrir">Reabrir</string>
    <string name="txt_pautas_finalizadas">Pautas finalizadas</string>

    <string name="txtHint_nome">Nome</string>
    <string name="txtHint_email">E-mail...</string>
    <string name="txtHint_password">Senha...</string>
    <string name="txtHint_repetirpassword">Repita a senha...</string>
    <string name="txtHint_titulo">Titulo da pauta</string>

    <string name="txtHint_detalhe">Detalhe da paula</string>
    <string name="txtHint_descricao">Descrição da paula</string>
    <string name="txt_reset_password">Um e-mail foi enviado para redefinir sua senha</string>
    <string name="txt_reset_error_email">O e-mail informado não existe</string>
    <string name="txt_reset_error">Ocorreu um erro ao tentar redefinir seu acesso, por favor tente mais tarde</string>

    <string name="txtLogin">Entrar</string>
    <string name="txtCadastrar">Cadastrar</string>
    <string name="error_invalid_login">Problemas ao efetuar o login. Verifique se o e-mail e senha estão corretos</string>
    <string name="error_invalid_email">O e-mail informado é inválido.</string>
    <string name="error_invalid_password">A senha informada é inválida.</string>
    <string name="error_invalid_confirm_password">A senha informada está diferente.</string>
    <string name="error_validation_password">A senha deve ter no minimo 6 digitos com : números, letras maiusculo e minusculo.</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_field_email_required">O campo e-mail é obrigatório</string>

    <string name="error_create_account">Erro ao tentar registrar o usuário!</string>
    <string name="permission_rationale">"É necessario permitir acesso aos contatos para ver a lista de e-mails."</string>



    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Fechar menu lateral</string>
    <string name="txt_nav_header_desc">Imagem do perfil</string>
    <string name="txt_im_my_events">Pautas em aberto</string>
    <string name="txt_im_logout">Sair</string>
    <string name="txt_im_about">Sobre</string>

    <string name="txt_erro_add_pauta">Erro ao adicionar a pauta</string>
    <string name="param_pauta_detalhe">param_pauta_detalhe</string>
    <string name="param_pauta_detalhe_id">param_pauta_detalhe_id</string>
</resources>