<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pautas"
            android:title="@string/txt_im_my_events" />
        <item
            android:id="@+id/nav_pautas_finalizadas"
            android:title="@string/txt_pautas_finalizadas" />
    </group>

    <item android:title="@string/txt_options">
        <menu>
            <item
                android:id="@+id/nav_addpautas"
                android:visible="false"
                android:title="@string/action_addpautas" />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/action_logout" />
            <item
                android:id="@+id/nav_about"
                android:visible="false"
                android:title="@string/action_about" />

        </menu>
    </item>
</menu>
