<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorBackGroundBlue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lin_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        tools:layout_editor_absoluteX="-16dp">


        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSubTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_hello"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_one_login"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:layout_marginBottom="8dp"
            android:elevation="10dp"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            card_view:cardElevation="10dp"
            tools:layout_editor_absoluteX="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputEmail"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:hint="@string/txtHint_email"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputSenha"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputEmail">

                    <AutoCompleteTextView
                        android:id="@+id/edtSenha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:hint="@string/txtHint_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse" />
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/txtInputSenha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="15dp"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_button"
            android:text="@string/txt_login"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_button"
            android:text="@string/txt_cadastrar"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtRecuperarSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_recuperar"
        android:textAlignment="center"
        android:autoLink="all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_card"
        app:layout_constraintVertical_bias="0.192" />

</androidx.constraintlayout.widget.ConstraintLayout>