<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorBackGroundBlue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="15dp"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_one_login"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:elevation="10dp"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardElevation="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/edtTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:hint="@string/txtHint_titulo"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputDetalhe"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputTitulo"
                    tools:layout_editor_absoluteY="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/edtDetalhe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:hint="@string/txtHint_detalhe"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputPauta"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:hint="@string/txtHint_descricao"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintBottom_toTopOf="@+id/btnSalvarPauta"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputDetalhe">

                    <EditText
                        android:id="@+id/edtDescPauta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        app:layout_constraintBottom_toTopOf="@+id/txtInputDetalhe"
                        tools:layout_editor_absoluteX="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSalvarPauta"
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_button_nm"
                    android:text="@string/txt_salvar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputPauta" />

                <TextView
                    android:id="@+id/txtAutor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSalvarPauta"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputPauta" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
